[package]
name = "minesweeper-rs"
version = "0.1.0"
authors = ["Robert Mikhayelyan <rob.mikh@outlook.com>"]
edition = "2021"
description = "A port of robmikh/Minesweeper using windows-rs."
license = "MIT License"
readme = "README.md"
keywords = ["minesweeper", "winrt", "windows-rs"]
categories = ["game-development"]
repository = "https://github.com/robmikh/minesweeper-rs"
homepage = "https://github.com/robmikh"

[dependencies]
rand = "0.8.5"

[dependencies.windows]
version = "0.37.0"
features = [
    "alloc",
    "Foundation_Collections",
    "Foundation_Numerics",
    "Graphics",
    "System",
    "UI_Composition_Desktop",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Composition",
    "Win32_UI_WindowsAndMessaging",
]

[features]
show-mines = []

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
